--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+/.idea/inspectionProfiles/
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
